--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9702,7 +9702,7 @@ a:focus {
     width: 90% !important; } }
 
 body {
-  background: #f9f9f9;
+  background: #fff;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   font-size: 1rem;
   overflow-x: hidden;
