--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5997,8 +5997,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("/wordpress/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.eot?v=4.7.0");
-  src: url("/wordpress/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("/wordpress/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("/wordpress/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("/wordpress/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("/wordpress/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+  src: url("/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.eot?v=4.7.0");
+  src: url("/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("/wp-content/themes/graviti/node_modules/font-awesome/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -9702,7 +9702,7 @@ a:focus {
     width: 90% !important; } }
 
 body {
-  background: #fff;
+  background: white;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   font-size: 1rem;
   overflow-x: hidden;
